--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ importFrom(snpStats, ld, row.summary, col.summary)
 import(TxDb.Hsapiens.UCSC.hg19.knownGene)
 import(ChIPpeakAnno)
 import(ggplot2)
-importFrom(VariantAnnotation, locateVariants, AllVariants)
+importFrom(VariantAnnotation, locateVariants, AllVariants, FiveUTRVariants, ThreeUTRVariants)
 importFrom(reshape, melt.data.frame, melt.array, melt.list, melt)
 import(scales)
 import(FunciSNP.data)
